--- a/sarupriya/Task8/index.html
+++ b/sarupriya/Task8/index.html
@@ -13,7 +13,7 @@
     <div class="margin_b">
         <div class="bg_color padding1 font_f">
             <div class="width_a margin_a">
-                <div class="float_left width_left">
+                <div class="float_left width_left nofloat">
                     <div class="bg_color2 padding border">
                         <div class="float_left width_l1">
                             <img src="logo.jpeg" alt="LOGO" width="95%" height="90px">
@@ -25,7 +25,7 @@
                         <div style="clear: both;"></div>
                     </div>
                 </div>
-                <div class="float_right width_right"></div>
+                <div class="float_right width_right nofloat"></div>
                 <div style="clear: both;"></div>
             </div>
         </div>
@@ -38,7 +38,7 @@
     <div class="margin_b">
         <div class="bg_color">
             <div class="width_a margin_a ">
-                <div class="float_left width_left">
+                <div class="float_left width_left nofloat">
                     <div class="border3 bg_color2">
                         <div class="width_a margin_a padding">
                             <div class="border2  padding3">
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="float_right width_right padding">
+                <div class="float_right width_right padding nofloat">
                     <div class="bg_color2 border">
                         <h1 class="width_a margin_a padding5">The title for your content</h1>
                         <div class="width_b margin_a font_size4 linespacing">You can include all of ypur content in one
