--- a/gayathri/template3/task3.html
+++ b/gayathri/template3/task3.html
@@ -13,18 +13,18 @@
        <div class="float_left width">
            <div class="bg_white padding">
               <div class="margin">section</div> 
-              <div class="border margin_auto width90 padding bgcolor6">
+              <div class="border margin_auto width95 padding bgcolor6">
                  <div class="margin">artical</div>
-                 <div class="margin_auto width70 padding">
+                 <div class="margin_auto width95 padding">
                     <div class="border bgcolor7">header</div>
-                    <div class="border padding bgcolor8">p</div>
+                    <div class="border padding5 bgcolor8">p</div>
                  </div>
                </div> 
-               <div class="border margin_auto width90 padding bgcolor6">
+               <div class="border margin_auto width95 padding bgcolor6">
                   <div class="margin">artical</div>
-                  <div class="margin_auto width70 padding">
+                  <div class="margin_auto width95 padding">
                      <div class="border bgcolor7">header</div>
-                     <div class="border padding bgcolor8">p</div>
+                     <div class="border padding5 bgcolor8">p</div>
                   </div>
  
                </div> 
