--- a/sarupriya/Task7/index.html
+++ b/sarupriya/Task7/index.html
@@ -13,11 +13,11 @@
         <div class="font_size1 font_bold padding9 padding8">Your Logo
             <span class="font_size2 font_color1"> using a single layout to create several different looks</span>
         </div>
-        <div class="bg_color2 padding1 margin">
-            <span><a class="button font_color4 border txtalign">Home</a></span>
-            <span><a class="button font_color font_bold border txtalign">About</a></span>
-            <span><a class="button font_color4 border txtalign">Services</a></span>
-            <span><a class="button font_color4 border txtalign">Contact us</a></span>
+        <div class="bg_color2 padding1 margin txt_align">
+            <span class="disp_block"><a class="button font_color4 border txtalign">Home</a></span>
+            <span class="disp_block"><a class="button font_color font_bold border txtalign">About</a></span>
+            <span class="disp_block"><a class="button font_color4 border txtalign">Services</a></span>
+            <span class="disp_block"><a class="button font_color4 border txtalign">Contact us</a></span>
         </div>
         <div class="bg_color3 padding padding6 margin1">
             <div class="float_left width_left nofloat nofloat1 nofloat2 nofloat3">
