--- a/abinash/template_5(1)/index.html
+++ b/abinash/template_5(1)/index.html
@@ -31,13 +31,14 @@
                         </div>
                     </div>
                     <div class="float_r1 width_r1">
-                        <div class="font_size1 font_g margin_a">Greetings & Salutations</div>
-                        <div class="font_size2 padding_e padding_c linespacing">
+                        <div class="font_size1 font_g  padding">Greetings & Salutations</div>
+                        <div class="font_size2 padding_e  linespacing">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mauris feugiat,
                             eros vel commodo consequat, neque ligula fermentum sem, quis elementum quam
                             lectus eget orci.
                             Quisque sagittis gravida ligula, nec congue ligula pellen- tesque suscipit.
                             Curabitur putvinar aliquqm libero et suscipit. Donec pellentesque consectetur ante,
+                            a viverra quam lobortis facilisis Donec pellentesque consectetur ante,
                             a viverra quam lobortis facilisis.<br>
                         </div>
                         <div class="font_size2 padding_e padding_c linespacing">
@@ -60,7 +61,7 @@
                                     <div>
                                         <div class="font_size2 linespacing ">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit Repellat blanditiis
-                                            dolore esse Quae  
+                                            dolore esse 
                                         </div>
                                     </div>
                                 </div>
@@ -75,14 +76,13 @@
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit Minus id doloribus
                                         blanditiis iste corrupti soluta veritatis cumque nemo necessitatibus molestiae
                                         dicta mollitia autem consectetur delectus Pariatur dolores ipsum eum
-                                        perferendis soluta veritatis cumque nemo necessitatibus molestiae
-                                        dicta mollitia autem consectetur.
+                                        perferendis soluta veritatis cumque   .
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="border_a  margin_b margin_a bg_f font_f">
+                    <div class="border_a   margin_top bg_f font_f">
                         <div class="width">
                             <div class="font_g font_size4 margin_a">Image Categories</div>
                             <div class="font_color1  font_size3 ">
