--- a/sarupriya/Bootstrap/index.html
+++ b/sarupriya/Bootstrap/index.html
@@ -12,47 +12,232 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="row bg-dark p-2 text text-white">
-            <div class="col-md-1"></div>
-            <div class="col-md-8 text-centre">
-                <div>
-                    <i class="fa-solid fa-phone"></i>
-                    +62 088 999 123
+    <div class="container-fluid bg_a">
+        <div class="container">
+            <div class="row p-2 text text-white">
+                <div class="col-md-6 col-sm-12 col- text-centre">
+                    <div>
+                        <i class="fa-solid fa-phone"></i>
+                        +62 088 999 123
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 col- text-end">
+                    <i class="fa-brands fa-facebook-f width_a"></i>
+                    <i class="fa-brands fa-twitter width_a"></i>
+                    <i class="fa-brands fa-linkedin-in width_a"></i>
+                    <i class="fa-brands fa-pinterest width_a"></i>
+                    <i class="fa-brands fa-glide-g width_a"></i>
+                    <i class="fa-solid fa-basketball width_a"></i>
                 </div>
             </div>
-            <div class="col-md-3">
-                <i class="fa-brands fa-facebook-f width_a"></i>
-                <i class="fa-brands fa-twitter width_a"></i>
-                <i class="fa-brands fa-linkedin-in width_a"></i>
-                <i class="fa-brands fa-pinterest width_a"></i>
-                <i class="fa-brands fa-glide-g width_a"></i>
-                <i class="fa-solid fa-basketball width_a"></i>
-            </div>
         </div>
-        <div class="row bg-white p-3">
-            <div class="col-md-1"></div>
-            <div class="col-md-5 text-centre font_size1 bold">
+    </div>
+    <div class="container">
+        <div class="row p-3">
+            <div class="col-md-5 col-sm-12 col- font_size1 bold">
                 <i class="fa-solid fa-square text text-danger font_size"></i><i
                     class="fa-solid fa-square color_a font_size"></i>
                 ETERNA
             </div>
-            <div class="col-md-6">
-                <button type="button " class="btn btn-danger bold font_size"><a><i class="fa-solid fa-house"></i>
-                        Home <i class="fa-solid fa-angle-down font_size"></i></a>
+            <div class="col-md-7 col-sm-12 text-end">
+                <button type="button" class="btn btn-danger bold font_a"><a><i class="fa-solid fa-house"></i>
+                        Home <i class="fa-solid fa-angle-down font_c"></i></a>
                 </button>
-                <button type="button" class="btn btn-white"><a>Feature <i class="fa-solid fa-angle-down font_size"></i></a></button>
-                <button type="button" class="btn btn-white"><a>Pages <i class="fa-solid fa-angle-down font_size"></i></a></button>
-                <button type="button" class="btn btn-white"><a>Portfolio <i class="fa-solid fa-angle-down font_size"></i></a></button>
-                <button type="button" class="btn btn-white"><a>Blog <i class="fa-solid fa-angle-down font_size"></i></a></button>
-                <button type="button" class="btn btn-white"><a>Contact </a></button>
+                <button type="button" class="btn btn-white font_b"><a>Feature <i
+                            class="fa-solid fa-angle-down font_c"></i></a></button>
+                <button type="button" class="btn btn-white font_b"><a>Pages <i
+                            class="fa-solid fa-angle-down font_c"></i></a></button>
+                <button type="button" class="btn btn-white font_b"><a>Portfolio <i
+                            class="fa-solid fa-angle-down font_c"></i></a></button>
+                <button type="button" class="btn btn-white font_b"><a>Blog <i
+                            class="fa-solid fa-angle-down font_c"></i></a></button>
+                <button type="button" class="btn btn-white font_b"><a>Contact </a></button>
             </div>
         </div>
-        <div class="bg_img">
-            <div class="padding font_size1 bold color1">Responsive 
+    </div>
+    <div class="bg_img txtalign">
+        <div class="padding ">
+            <div class="font_size1 bold color1">Responsive
                 <span class="text text-dark">and</span>
                 Cross Browser
                 <span class="text text-dark">Compatibility</span>
+            </div>
+            <div class="color2 pt-3">Pellentesque habitant morbi tositique senectus et netus et malesuada</div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="container p-5 border_b">
+            <div class="row ">
+                <div class="col-md-1 p-2">
+                    <img src="img1.png" alt="Star" height="55px" width="80%">
+                </div>
+                <div class="col-md-3">
+                    <div class="font_f">
+                        High <span class="bold ">Quality</span>
+                    </div>
+                    <div class="font_d pt-2 color2">Lorem ipsum dolor sit amet,has ei ipsums castvoda deseruisse am
+                        sea facilities.</div>
+                    <div class="bold font_e pt-1">Learn more</div>
+                </div>
+                <div class="col-md-1 pt-2">
+                    <img src="img2.png" alt="dropbox" height="55px" width="87%">
+                </div>
+                <div class="col-md-3">
+                    <div class="font_f">
+                        Rich of <span class="bold">Features</span>
+                    </div>
+                    <div class="font_d pt-2 color2">Lorem ipsum dolor sit amet,has ei ipsums castvoda deseruisse am
+                        sea facilities.</div>
+                    <div class="bold font_e pt-1">Learn more</div>
+                </div>
+                <div class="col-md-1 pt-1">
+                    <img src="img3.png" alt="monitor" height="65px" width="100%">
+                </div>
+                <div class="col-md-3">
+                    <div class="font_f">
+                        Modern <span class="bold">Design</span>
+                    </div>
+                    <div class="font_d pt-2 color2">Lorem ipsum dolor sit amet,has ei ipsums castvoda deseruisse am
+                        sea facilities.</div>
+                    <div class="bold font_e pt-1">Learn more</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="container p-4 txtalign">
+            <div class="font_f">Our <span class="bold">Pricing</span></div>
+            <div class="font_d pt-2 color2">Lorem ipsum dolor sit amet,has ei ipsums castvoda deseruisse am
+                sea facilities.</div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="bg_c p-4"></div>
+                    <div class="bg-dark pb-4 txtalign font_f color3">Very
+                        <span class="bold text text-white">Basic</span>
+                    </div>
+                    <div class="bg_a pt-5 pb-4 txtalign color3 font_a">
+                        $15.00/Month
+                    </div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i> 100 application</div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i>
+                        24x7 support available
+                    </div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i> No hidden fees</div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i>
+                        Free 30-days trial
+                    </div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i>
+                        Stop anytime easily
+                    </div>
+                    <div class="bg_a p-4">
+                        <div class="txtalign">
+                            <button type="button" class="bg_b text text-white border_n p-1 width_b "> <i
+                                    class="fa-solid fa-angle-down font_size bold"></i> Sign Up </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="bg_c p-4"></div>
+                    <div class="bg-dark pb-4 txtalign font_f color3">Simple
+                        <span class="bold text text-white ">Choice</span>
+                    </div>
+                    <div class="bg_a pt-5 pb-4 txtalign color3 font_a">
+                        $20.00/Month
+                    </div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i> 100 application</div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i>
+                        24x7 support available
+                    </div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i> No hidden fees</div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i>
+                        Free 30-days trial
+                    </div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i>
+                        Stop anytime easily
+                    </div>
+                    <div class="bg_a p-4">
+                        <div class="txtalign">
+                            <button type="button" class="bg_b text text-white border_n p-1 width_b "> <i
+                                    class="fa-solid fa-angle-down font_size bold"></i> Sign Up </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="bg_d p-4"></div>
+                    <div class="bg_e pb-4 txtalign font_f color3">Special
+                        <span class="bold text text-white ">Choice</span>
+                    </div>
+                    <div class="bg_c pt-5 pb-4 txtalign color3 font_a">
+                        $15.00/Month
+                    </div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i> 100 application</div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i>
+                        24x7 support available
+                    </div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i> No hidden fees</div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i>
+                        Free 30-days trial
+                    </div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i>
+                        Stop anytime easily
+                    </div>
+                    <div class="bg_f p-4">
+                        <div class="txtalign">
+                            <button type="button" class="bg_b text text-white border_n p-1 width_b "> <i
+                                    class="fa-solid fa-angle-down font_size bold"></i> Sign Up </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="bg-dark p-4"></div>
+                    <div class="bg-dark pb-4 txtalign font_f color3">Just
+                        <span class="bold text text-white">Happy</span>
+                    </div>
+                    <div class="bg_a pt-5 pb-4 txtalign color3 font_a">
+                        $15.00/Month
+                    </div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i> 100 application</div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i>
+                        24x7 support available
+                    </div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i> No hidden fees</div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i>
+                        Free 30-days trial
+                    </div>
+                    <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i>
+                        Stop anytime easily
+                    </div>
+                    <div class="bg_a p-4">
+                        <div class="txtalign">
+                            <button type="button" class="bg_b text text-white border_n p-1 width_b "> <i
+                                    class="fa-solid fa-angle-down font_size bold"></i> Sign Up </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="txtalign p-5">
+        <div class="font_g">What People <span class="bold">saying</span> about us</div>
+    </div>
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 text-end">
+                    <i class="fa-solid fa-quote-left font_h"></i>
+                </div>
+                <div class="col-md-8 color4 txtalign font_i linespacing">
+                    Aliquam a orci quis sagitts.Etiam adipiscing, justo quis feugiat.
+                    Suspendise eu<br> esat quam.Vivamus portitor eros quis nisi lacinia sed
+                    interdum lorem vutputate.<br> Aliquam a orci quis nisi sagittis. Etiam
+                    adipiscing justo quis feugiat.
+                </div>
+                <div class="col-md-2"><i class="fa-solid fa-quote-right font_h"></i>
+                </div>
             </div>
         </div>
     </div>
