--- a/sarupriya/Bootstrap/index.html
+++ b/sarupriya/Bootstrap/index.html
@@ -222,7 +222,7 @@
         </div>
     </div>
     <div class="txtalign p-5">
-        <div class="font_g">What People <span class="bold">saying</span> about us</div>
+        <div class="font_g">What people <span class="bold">saying</span> about us</div>
     </div>
     <div class="container-fluid">
         <div class="container">
@@ -241,6 +241,73 @@
             </div>
         </div>
     </div>
+    <div class="txtalign pt-4">
+        <img src="img4.png" alt="image" width="5%" height="55px">
+    </div>
+    <div class="txtalign pt-2 font_b text-dark">
+        Hillary Doe
+    </div>
+    <div class="txtalign pt-3 bold font_a">
+        www.companyname.com
+    </div>
+    <div class="container padding1">
+        <div class="font_f">Related <span class="bold">Works</span></div>
+    </div>
+    <div class="container-fluid pb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <img src="img5.jpg" alt="Image 1" height="175px" width="100%">
+                </div>
+                <div class="col-md-3">
+                    <img src="img6.jpg" alt="Image 1" height="175px" width="100%">
+                </div>
+                <div class="col-md-3">
+                    <img src="img7.jpg" alt="Image 1" height="175px" width="100%">
+                </div>
+                <div class="col-md-3">
+                    <img src="img8.jpg" alt="Image 1" height="175px" width="100%">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid bg-dark p-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 text text-white p-5">
+                    <div class="bold font_f">Browser pages</div>
+                    <div class="font_e color3 pt-3">our company</div>
+                    <div class="font_e color3">Terms and conditions</div>
+                    <div class="font_e color3">Privacy policy</div>
+                    <div class="font_e color3">Press release</div>
+                    <div class="font_e color3">What we have done</div>
+                    <div class="font_e color3">Our support forum</div>
+                </div>
+                <div class="col-md-4 text text-white p-5">
+                    <div class="bold font_f">Get in touch</div>
+                    <div class="font_e color5 pt-3 bold">Eterna company inc.</div>
+                    <div class="font_e color3">Somestreet 200 VW,Suite village A001</div>
+                    <div class="font_e color3">Jakarta 1:426 indonesia</div>
+                    <div class="font_e color3">
+                        <i class="fa-solid fa-phone pt-3"></i> (123)456-7890 - (123)555-7891
+                    </div>
+                    <div class="font_b color3">
+                        <i class="fa-regular fa-envelope"></i> email@domainname.com
+                    </div>
+                </div>
+                <div class="col-md-4 text text-white p-5">
+                    <div class="bold font_f">Subcribe newsletter</div>
+                    <div class="font_e color3 pt-3">Keep updated for new release and freebies.</div>
+                    <div class="font_e color3">Enter e-mail and subscribe our newsletter</div>
+                    <div class="p-3">
+                        <button type="button" class="btn btn-white width_d bg-white height"></button>
+                        <button type="button" class="btn btn-danger font_e width_c">Subcribe </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
