--- a/sarupriya/Bootstrap/index.html
+++ b/sarupriya/Bootstrap/index.html
@@ -300,8 +300,7 @@
                     <div class="font_e color3 pt-3">Keep updated for new release and freebies.</div>
                     <div class="font_e color3">Enter e-mail and subscribe our newsletter</div>
                     <div class="p-3">
-                        <button type="button" class="btn btn-white width_d bg-white height"></button>
-                        <button type="button" class="btn btn-danger font_e width_c">Subcribe </button>
+                        <button type="button" class="btn btn-white width_d bg-white height"></button><button type="button" class="btn btn-danger font_e width_c">Subcribe </button>
                     </div>
                 </div>
             </div>
