--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -11,11 +11,11 @@
 
 <body>
 
-  <header class="bg_color1">
+  <header class="bg_color1 margin_bottom">
     <div class="width_a margin_a">
       <div class="float_left width_l1">
         <div class="float_left width_l1">
-          <img src="img_g.jpeg" alt="Guitar" height="75px">
+          <img src="img_g.jpeg" alt="Guitar" height="75px" width="100%">
         </div>
         <div class="float_right width_r1">
           <div class="padding font_size bg_color">SoundAMP</div>
@@ -49,8 +49,8 @@
     </div>
   </header>
   <div class="width_b margin_a">
-    <div class="padding">
-      <img src="img.jpeg" height="130px" width="100%">
+    <div class="padding bg_image">
+      <!-- <img src="img.jpeg" height="130px" width="100%"> -->
     </div>
   </div>
   <div class="width_b margin_a margin">
