--- a/devi/template_8/index.html
+++ b/devi/template_8/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="margin1 font">
         <div class="bg_color2 paddingT1 font_f">
-            <div class="float_l width1">
+            <div class="float_l width1 nofloat1 nofloat2 nofloat3 nofloat4 nofloat5 nofloat6">
                 <div class="bg_color margin0 width80 paddingT2 button button_border">
                     <div class="float_l width_11">
                         <div class="margin0 width90">
@@ -30,7 +30,7 @@
                     <div style="clear: both;"></div>
                 </div>
             </div>
-            <div class="float_r width2"></div>
+            <div class="float_r width2 nofloat1 nofloat2 nofloat3 nofloat4 nofloat5 nofloat6"></div>
             <div style="clear: both;"></div>
         </div>
     </div>
@@ -42,7 +42,7 @@
     <div class="margin1 font">
         <div class="bg_color2">
             <!-- <div class="bg_color "> -->
-            <div class="float_l width1">
+            <div class="float_l width1 nofloat1 nofloat2 nofloat3 nofloat4 nofloat5 nofloat6">
                 <div class="width80 margin0 button_border2 bg_color">
                     <div class="width80 margin0 paddingT2">
                         <div class="border2 font_size4 paddingRL">
@@ -73,8 +73,8 @@
                     </div>
                 </div>
             </div>
-            <div class="float_r width2">
-                <div class="paddingT2">
+            <div class="float_r width2 nofloat1 nofloat2 nofloat3 nofloat4 nofloat5 nofloat6">
+                <!-- <div class="paddingT2"> -->
                     <div class="bg_color width80 margin0 button button_border1">
                         <h1 class="width80 margin0 padding21 padding22">The title for your content</h1>
                         <div class="width94 margin0 fontsize3 font_linespacing">Lorem, ipsum dolor sit amet consectetur
@@ -101,7 +101,7 @@
                             quaerat velit quibusdam rem obcaecati commodi, ex provident accusamus molestiae!
                         </div>
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
             <div style="clear: both;"></div>
             <!-- </div> -->
