--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -54,14 +54,31 @@
     </div>
   </div>
   <div class="width_b margin_a margin">
-    <div class="float_left width_left">
-       <div class="float_left width_l3">
-        <img src="img_1.jpeg" height="150px" width="90%">
-       </div>
-       <div class="float_right width_r3">
-        <img src="img_2.jpeg" height="150px" width="90%">
-       </div>
+    <div class="float_left width_l3">
+      <div class="float_left width_l3">
+        <img src="img_1.jpeg" height="170px" width="95%">
+        <div class="txt">
+          <div class="padding2 ">10/05/2018</div>
+          <div class="txt_size ">Night laser Show</div>
+          <div class="padding2 ">#hip-hop #rnb #dance</div>
+          <div class="font">We are happy to announce this
+            special laser show.</div>
+        </div>
+        <div class="button1">See more...</div>
+      </div>
+      <div class="float_right width_r3">
+        <img src="img_2.jpeg" height="170px" width="95%">
+      </div>
     </div>
+    <div class="float_right width_r3">
+      <div class="float_left width_l3">
+        <img src="img_3.jpeg" height="170px" width="95%">
+      </div>
+      <div class="float_right width_r3">
+        <img src="img_4.jpeg" height="170px" width="95%">
+      </div>
+    </div>
+    <div style="clear: both;"></div>
   </div>
 </body>
 
