--- a/devi/template_7/template_7.html
+++ b/devi/template_7/template_7.html
@@ -7,25 +7,25 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="bg_color text_color font_size font_type padding">
+        <div class="bg_color text_color font_size font_type padding txt_align1 txtalign2 txtalign3 txtalign4 txtalign5 txtalign6">
             Your Logo
-            <span class="font_size1 text_color3">Use a single layout to create
+            <span class="font_size1 text_color3 display_block1 display_block2 display_block3 display_block4 display_block5 display_block6">Use a single layout to create
                 several different blocks</span>
         </div>
-        <div class="bg_color1 font_type padding1">
+        <div class="bg_color1 font_type padding1 txt_align1 txtalign2 txtalign3 txtalign4 txtalign5 txtalign6">
             <div class="width1 margin_0">
-                <span class="button border_right">Home</span>
-                <span class="button border_right">About</span>
-                <span class="button border_right">Services</span>
-                <span class="button">Contact Us</span>
+                <span class="button border_right display_block1 display_block2 display_block3 display_block4 display_block5 display_block6">Home</span>
+                <span class="button border_right display_block1 display_block2 display_block3 display_block4 display_block5 display_block6">About</span>
+                <span class="button border_right display_block1 display_block2 display_block3 display_block4 display_block5 display_block6">Services</span>
+                <span class="button display_block1 display_block2 display_block3 display_block4 display_block5 display_block6">Contact Us</span>
             </div>
         </div>
         <div class="bg_color2 font_type text_color">
-            <div class="floatl width_20">
+            <div class="floatl width_20 nofloat_l1 nofloat_l2 nofloat_l3 nofloat_l4 nofloat_l5 nofloat_l6 ">
                 <img src="Paper rocket cartoon.png" class="img_height"
                     width="100%">
             </div>
-            <div class="floatr width_80">
+            <div class="floatr width_80 nofloat1 nofloat2 nofloat3 nofloat4 nofloat5 nofloat6 ">
                 <div class="width2 margin_0">
                     <div class="font_size2 padding4">About</div>
                     <div class="width_80 line_spacing">
@@ -42,9 +42,9 @@
             <div style="clear: both"></div>
         </div>
         <div class="font_type">
-            <div class="floatl width_20">
+            <div class="floatl width_20 nofloat1 nofloat2 nofloat3 nofloat4 nofloat5 nofloat6 ">
                 <div class="bg_color3 padding1 padding2">
-                    <div class="width_80 margin_0">
+                    <div class="width_80 margin_0 txtalign1 txtalign2 txtalign3 txtalign4 txtalign5 txtalign6">
                         <div class="button1 border_bottom margin1">About Us</div>
                         <div class="button1 border_bottom">How We Work</div>
                         <div class="button1 border_bottom">Testimonials</div>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
             </div>
-            <div class="floatr width_80">
+            <div class="floatr width_80 nofloat1 nofloat2 nofloat3 nofloat4 nofloat5 nofloat6 ">
                 <div class="bg_color4 text_color1 padding3">
                     <div class="width2 margin_0">
                         <div class="text_color2 font_size4 padding4">How We Work</div>
