--- a/sarupriya/Bootstrap/index.html
+++ b/sarupriya/Bootstrap/index.html
@@ -15,13 +15,13 @@
     <div class="container-fluid bg_a">
         <div class="container">
             <div class="row p-2 text text-white">
-                <div class="col-md-6 col-sm-12 col- text-centre">
+                <div class="col-md-6 col-sm-6 col- text-centre txt_align txt_align1 txt_align2 txt_align3">
                     <div>
                         <i class="fa-solid fa-phone"></i>
                         +62 088 999 123
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 col- text-end">
+                <div class="col-md-6 col-sm-6 col- text-end txt_align txt_align1 txt_align2 txt_align3">
                     <i class="fa-brands fa-facebook-f width_a"></i>
                     <i class="fa-brands fa-twitter width_a"></i>
                     <i class="fa-brands fa-linkedin-in width_a"></i>
@@ -68,10 +68,10 @@
     <div class="container-fluid">
         <div class="container p-5 border_b">
             <div class="row ">
-                <div class="col-md-1 p-2">
+                <div class="col-md-1 col-sm-6 p-2">
                     <img src="img1.png" alt="Star" height="55px" width="80%">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="font_f">
                         High <span class="bold ">Quality</span>
                     </div>
@@ -79,10 +79,10 @@
                         sea facilities.</div>
                     <div class="bold font_e pt-1">Learn more</div>
                 </div>
-                <div class="col-md-1 pt-2">
+                <div class="col-md-1 col-sm-6 pt-2 nofloat nofloat1 nofloat2 nofloat3">
                     <img src="img2.png" alt="dropbox" height="55px" width="87%">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6 nofloat nofloat1 nofloat2 nofloat3">
                     <div class="font_f">
                         Rich of <span class="bold">Features</span>
                     </div>
@@ -90,10 +90,10 @@
                         sea facilities.</div>
                     <div class="bold font_e pt-1">Learn more</div>
                 </div>
-                <div class="col-md-1 pt-1">
+                <div class="col-md-1 col-sm-6 pt-1 nofloat nofloat1 nofloat2 nofloat3">
                     <img src="img3.png" alt="monitor" height="65px" width="100%">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6 nofloat nofloat1 nofloat2 nofloat3">
                     <div class="font_f">
                         Modern <span class="bold">Design</span>
                     </div>
@@ -114,7 +114,7 @@
     <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="bg_c p-4"></div>
                     <div class="bg-dark pb-4 txtalign font_f color3">Very
                         <span class="bold text text-white">Basic</span>
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="bg_c p-4"></div>
                     <div class="bg-dark pb-4 txtalign font_f color3">Simple
                         <span class="bold text text-white ">Choice</span>
@@ -166,7 +166,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6 nofloat nofloat1 nofloat2 nofloat3">
                     <div class="bg_d p-4"></div>
                     <div class="bg_e pb-4 txtalign font_f color3">Special
                         <span class="bold text text-white ">Choice</span>
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6 nofloat nofloat1 nofloat2 nofloat3">
                     <div class="bg-dark p-4"></div>
                     <div class="bg-dark pb-4 txtalign font_f color3">Just
                         <span class="bold text text-white">Happy</span>
@@ -227,16 +227,16 @@
     <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-md-2 text-end">
+                <div class="col-md-2 col-sm-12 text-end">
                     <i class="fa-solid fa-quote-left font_h"></i>
                 </div>
-                <div class="col-md-8 color4 txtalign font_i linespacing">
+                <div class="col-md-8 col-sm-12 color4 txtalign font_i linespacing">
                     Aliquam a orci quis sagitts.Etiam adipiscing, justo quis feugiat.
                     Suspendise eu<br> esat quam.Vivamus portitor eros quis nisi lacinia sed
                     interdum lorem vutputate.<br> Aliquam a orci quis nisi sagittis. Etiam
                     adipiscing justo quis feugiat.
                 </div>
-                <div class="col-md-2"><i class="fa-solid fa-quote-right font_h"></i>
+                <div class="col-md-2 col-sm-12"><i class="fa-solid fa-quote-right font_h"></i>
                 </div>
             </div>
         </div>
@@ -256,25 +256,25 @@
     <div class="container-fluid pb-5">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <img src="img5.jpg" alt="Image 1" height="175px" width="100%">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <img src="img6.jpg" alt="Image 1" height="175px" width="100%">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6 nofloat nofloat1 nofloat2 nofloat3">
                     <img src="img7.jpg" alt="Image 1" height="175px" width="100%">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6 nofloat nofloat1 nofloat2 nofloat3">
                     <img src="img8.jpg" alt="Image 1" height="175px" width="100%">
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid bg-dark p-3">
-        <div class="container">
+    <div class="container-fluid bg_a p-3">
+        <div class="container p-5">
             <div class="row">
-                <div class="col-md-4 text text-white p-5">
+                <div class="col-md-4 col-sm-12 text text-white">
                     <div class="bold font_f">Browser pages</div>
                     <div class="font_e color3 pt-3">our company</div>
                     <div class="font_e color3">Terms and conditions</div>
@@ -283,7 +283,7 @@
                     <div class="font_e color3">What we have done</div>
                     <div class="font_e color3">Our support forum</div>
                 </div>
-                <div class="col-md-4 text text-white p-5">
+                <div class="col-md-4 col-sm-12 text text-white">
                     <div class="bold font_f">Get in touch</div>
                     <div class="font_e color5 pt-3 bold">Eterna company inc.</div>
                     <div class="font_e color3">Somestreet 200 VW,Suite village A001</div>
@@ -295,18 +295,30 @@
                         <i class="fa-regular fa-envelope"></i> email@domainname.com
                     </div>
                 </div>
-                <div class="col-md-4 text text-white p-5">
+                <div class="col-md-4 col-sm-12 text text-white">
                     <div class="bold font_f">Subcribe newsletter</div>
-                    <div class="font_e color3 pt-3">Keep updated for new release and freebies.</div>
-                    <div class="font_e color3">Enter e-mail and subscribe our newsletter</div>
-                    <div class="p-3">
-                        <button type="button" class="btn btn-white width_d bg-white height"></button><button type="button" class="btn btn-danger font_e width_c">Subcribe </button>
+                    <div class="font_e color3 pt-3">Keep updated for new release and freebies. Enter your</div>
+                    <div class="font_e color3 pb-3">e-mail and subscribe to our newsletter</div>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="" aria-label=""
+                            aria-describedby="basic-addon2">
+                        <span class="input-group-text bg-danger text-white border_n" id="basic-addon2">subscribe</span>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+    <div class="container-fluid bg-dark">
+        <div class="container text text-white pt-4">
+            <div class="row">
+                <div class="col-md-6 col-sm-12 font_e">©Eterna company.All rights reserved</div>
+                <div class="col-md-6 col-sm-12 font_e text-end">Designed by BootstrapMade</div>
+            </div>
+        </div>
+        <div class="text-end">
+            <i class="fa-solid fa-angle-down font_f pt-2 pb-1 txtalign down"></i>
+        </div>
+    </div>
 </body>
 
 </html>
