updated bootstrap files

--- a/sarupriya/Bootstrap/index.html
+++ b/sarupriya/Bootstrap/index.html
@@ -40,23 +40,23 @@
                 ETERNA
             </div>
             <div class="col-md-7 col-sm-12 text-end">
-                <button type="button" class="btn btn-danger bold font_a"><a><i class="fa-solid fa-house"></i>
+                <button type="button" class="btn btn-danger bold font_ab"><a><i class="fa-solid fa-house"></i>
                         Home <i class="fa-solid fa-angle-down font_c"></i></a>
                 </button>
-                <button type="button" class="btn btn-white font_b"><a>Feature <i
+                <button type="button" class="btn btn-white font_bc"><a>Feature <i
                             class="fa-solid fa-angle-down font_c"></i></a></button>
-                <button type="button" class="btn btn-white font_b"><a>Pages <i
+                <button type="button" class="btn btn-white font_bc"><a>Pages <i
                             class="fa-solid fa-angle-down font_c"></i></a></button>
-                <button type="button" class="btn btn-white font_b"><a>Portfolio <i
+                <button type="button" class="btn btn-white font_bc"><a>Portfolio <i
                             class="fa-solid fa-angle-down font_c"></i></a></button>
-                <button type="button" class="btn btn-white font_b"><a>Blog <i
+                <button type="button" class="btn btn-white font_bc"><a>Blog <i
                             class="fa-solid fa-angle-down font_c"></i></a></button>
-                <button type="button" class="btn btn-white font_b"><a>Contact </a></button>
+                <button type="button" class="btn btn-white font_bc"><a>Contact </a></button>
             </div>
         </div>
     </div>
     <div class="bg_img txtalign">
-        <div class="padding ">
+        <div class="padding">
             <div class="font_size1 bold color1">Responsive
                 <span class="text text-dark">and</span>
                 Cross Browser
@@ -115,11 +115,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
-                    <div class="bg_c p-4"></div>
-                    <div class="bg-dark pb-4 txtalign font_f color3">Very
-                        <span class="bold text text-white">Basic</span>
+                    <div class="bg_j p-4">
+                        <div class="pb-4 txtalign font_f color3">Very
+                            <span class="bold text text-white">Basic</span>
+                        </div>
                     </div>
-                    <div class="bg_a pt-5 pb-4 txtalign color3 font_a">
+                    <div class="bg_h pt-5 pb-4 txtalign color3 font_a">
                         $15.00/Month
                     </div>
                     <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i> 100 application</div>
@@ -141,11 +142,12 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <div class="bg_c p-4"></div>
-                    <div class="bg-dark pb-4 txtalign font_f color3">Simple
-                        <span class="bold text text-white ">Choice</span>
+                    <div class="bg_j p-4">
+                        <div class="pb-4 txtalign font_f color3">Simple
+                            <span class="bold text text-white ">Choice</span>
+                        </div>
                     </div>
-                    <div class="bg_a pt-5 pb-4 txtalign color3 font_a">
+                    <div class="bg_h pt-5 pb-4 txtalign color3 font_a">
                         $20.00/Month
                     </div>
                     <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i> 100 application</div>
@@ -167,9 +169,10 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 nofloat nofloat1 nofloat2 nofloat3">
-                    <div class="bg_d p-4"></div>
-                    <div class="bg_e pb-4 txtalign font_f color3">Special
-                        <span class="bold text text-white ">Choice</span>
+                    <div class="bg_k p-4">
+                        <div class="pb-4 txtalign font_f color3">Special
+                            <span class="bold text text-white ">Choice</span>
+                        </div>
                     </div>
                     <div class="bg_c pt-5 pb-4 txtalign color3 font_a">
                         $15.00/Month
@@ -193,11 +196,12 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 nofloat nofloat1 nofloat2 nofloat3">
-                    <div class="bg-dark p-4"></div>
-                    <div class="bg-dark pb-4 txtalign font_f color3">Just
-                        <span class="bold text text-white">Happy</span>
+                    <div class="bg_dark1 p-4">
+                        <div class="bg_dark1 pb-4 txtalign font_f color3">Just
+                            <span class="bold text text-white">Happy</span>
+                        </div>
                     </div>
-                    <div class="bg_a pt-5 pb-4 txtalign color3 font_a">
+                    <div class="bg_h pt-5 pb-4 txtalign color3 font_a">
                         $15.00/Month
                     </div>
                     <div class="txtalign p-2 border"><i class="fa-solid fa-check font_e"></i> 100 application</div>
@@ -271,7 +275,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid bg_a p-3">
+    <div class="container-fluid bg_g p-3">
         <div class="container p-5">
             <div class="row">
                 <div class="col-md-4 col-sm-12 text text-white">
@@ -308,7 +312,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid bg-dark">
+    <div class="container-fluid bg_dark">
         <div class="container text text-white pt-4">
             <div class="row">
                 <div class="col-md-6 col-sm-12 font_e">©Eterna company.All rights reserved</div>
